--- a/css/practica2.css
+++ b/css/practica2.css
@@ -49,7 +49,7 @@ pre {
     display: inline-block;
     margin-top: 30px;
     padding: 10px 20px;
-    background: #ff3b3b;
+    background: #3bffce;
     color: white;
     text-decoration: none;
     font-weight: bold;
